# offline_audionotes

./: .gitignore  LICENSE  PLAYSTORE_LISTING.md  PRIVACY_POLICY.md  README.md
.github/workflows/: deploy-playstore.yml
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android_app/app/src/main/res/drawable/: ic_audio_note.xml  ic_mic.xml  ic_share.xml  ic_stop.xml  ic_transcribe.xml
android_app/app/src/main/res/layout/: activity_main.xml  activity_note_detail.xml  activity_settings.xml  item_note.xml
android_app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android_app/app/src/main/res/values-night/: themes.xml
android_app/app/src/main/res/xml/: file_paths.xml
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
ios_app/: .gitignore
ios_app/OfflineAudioNotes/: Info.plist
ios_app/OfflineAudioNotes/OfflineAudioNotes/: ContentView.swift  OfflineAudioNotes-Bridging-Header.h  OfflineAudioNotesApp.swift  WhisperSmokeTest.swift
ios_app/OfflineAudioNotes/OfflineAudioNotes.xcodeproj/: project.pbxproj
ios_app/OfflineAudioNotes/OfflineAudioNotes/App/: OfflineAudioNotesApp.swift
ios_app/OfflineAudioNotes/OfflineAudioNotes/Data/Repositories/: SwiftDataNotesRepository.swift
ios_app/OfflineAudioNotes/OfflineAudioNotes/Domain/Services/: AudioPlayer.swift  AudioRecorder.swift
ios_app/OfflineAudioNotes/OfflineAudioNotes/Services/: BackgroundTranscriptionCoordinator.swift
ios_app/OfflineAudioNotes/OfflineAudioNotes/Services/Transcription/: TranscriptionService.swift  WhisperBridge.h  WhisperBridge.mm
ios_app/OfflineAudioNotes/OfflineAudioNotes/UI/Screens/: NoteDetailScreen.swift  NotesListScreen.swift
ios_app/OfflineAudioNotes/OfflineAudioNotes/UI/Theme/: Theme+Glass.swift  Theme+Palette.swift
(+23 files in other folders)
